--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="profile">
-        <img src="profile-pic.jpg" alt="Your Profile Picture">
+        <img src="profile-pic.jpeg" alt="Your Profile Picture">
         <h2>Hunter Clark</h2>
         <p>Graduate Student, University of Idaho</p>
         <a href="www.linkedin.com/in/hunterclark91" target="_blank"><button>LinkedIn</button></a>
