--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         <a href="www.linkedin.com/in/hunterclark91" target="_blank"><button>LinkedIn</button></a>
     </div>
     <div class="bio">
-        <p>Your bio goes here. Replace this text with your actual bio.</p>
+        <p>My name is Hunter Clark, I am a data engineer with five years of experience building and optimizing data pipelines, specializing in feature engineering for data science models. I am currently pursuing a Master’s in Computer Science at the University of Idaho, where I focus on machine learning and data-driven solutions. I earned my Bachelor’s degree in Mathematics from Boise State University.
+
+            Before transitioning to data engineering, I served in the U.S. Navy as a rescue swimmer and tactical helicopter aircrewman, where I developed the problem-solving skills and attention to detail that now guide my approach to complex data challenges. My expertise spans cloud-based data architectures, large-scale ETL processing, and data modeling. I have worked extensively with AWS resources and Pyspark to build scalable, high-performance data solutions. Additionally, I have experience designing and implementing feature stores, managing structured and unstructured datasets, and optimizing query performance for analytics and machine learning applications. My work also includes schema design, SQL-based data transformations, and data governance strategies to ensure consistency and efficiency in data processing workflows. I have presented research at international conferences, including IEEE TALE.
+            
+            I am passionate about leveraging data to drive meaningful insights and improve decision-making. Outside of my studies and work, I enjoy playing soccer, staying active, and spending time with my pets and family.</p>
     </div>
 </body>
 </html>
