--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .profile img {
             border-radius: 50%; /* Makes the image circular */
             width: 250px; /* Adjust as needed */
-            height: 250px; /* Adjust as needed */
+            height: 300px; /* Adjust as needed */
             object-fit: cover;
         }
         .profile button {
@@ -41,6 +41,7 @@
             margin-top: 10px;
         }
         .bio {
+            line-height: 1.6;
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
