adjusted spacing and profile pic size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             border-radius: 50%; /* Makes the image circular */
             width: 250px; /* Adjust as needed */
             height: 300px; /* Adjust as needed */
-            object-fit: cover;
+            object-fit: contain;
         }
         .profile button {
             padding: 10px 20px;
@@ -41,7 +41,7 @@
             margin-top: 10px;
         }
         .bio {
-            line-height: 1.6;
+            line-height: 1.8;
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
