--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         }
         .profile img {
             border-radius: 50%; /* Makes the image circular */
-            width: 250px; /* Adjust as needed */
+            width: 300px; /* Adjust as needed */
             height: 300px; /* Adjust as needed */
-            object-fit: contain;
+            object-fit: cover;
         }
         .profile button {
             padding: 10px 20px;
