adjusted spacing and profile pic size to fix flat edged circle

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="profile-pic.jpeg" alt="Your Profile Picture">
         <h2>Hunter Clark</h2>
         <p>Graduate Student, University of Idaho</p>
-        <a href="www.linkedin.com/in/hunterclark91" target="_blank"><button>LinkedIn</button></a>
+        <a href="https://www.linkedin.com/in/hunterclark91" target="_blank"><button>LinkedIn</button></a>
     </div>
     <div class="bio">
         <p>My name is Hunter Clark, I am a data engineer with five years of experience building and optimizing data pipelines, specializing in feature engineering for data science models. I am currently pursuing a Master’s in Computer Science at the University of Idaho, where I focus on machine learning and data-driven solutions. I earned my Bachelor’s degree in Mathematics from Boise State University.
