--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px;
+            background-color: #007bff;
+            color: white;
         }
         .nav {
             display: flex;
@@ -25,16 +27,18 @@
         .profile {
             text-align: center;
             padding: 40px;
+            background-color: #007bff;
+            color: white;
         }
         .profile img {
-            border-radius: 50%; /* Makes the image circular */
-            width: 300px; /* Adjust as needed */
-            height: 300px; /* Adjust as needed */
+            border-radius: 50%;
+            width: 300px;
+            height: 300px;
             object-fit: cover;
         }
         .profile button {
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #6c757d;;
             color: white;
             border: none;
             cursor: pointer;
