--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
         <h2>Publications</h2>
         <p>Here is a list of my peer-reviewed publications.</p>
         <ul>
-            <li><a href="ExplainS_TALE_2024_CR.pdf" target="_blank">Your Paper Title - Journal/Conference Name, Year</a></li>
+            <li><a href="Mixing_up_Gemini_and_AST_in_ExplainS_for_Authentic_SQL_Tutoring.pdf" target="_blank">Your Paper Title - Journal/Conference Name, Year</a></li>
         </ul>
     </div>
 </body>
